# sso-1

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  patch_idl.py
config/: oracle.example.toml  switchboard.example.yaml
oracle/offchain/function/: Dockerfile  main.py  requirements.txt
oracle/offchain/scoring/: __init__.py
oracle/offchain/tee/: __init__.py
oracle/onchain/: Anchor.toml
oracle/onchain/programs/sso_signal/: Cargo.toml
oracle/onchain/programs/sso_signal/src/: errors.rs  instructions.rs  lib.rs  state.rs
schemas/: signal_schema.md
scripts/: install-hooks.ps1  install-hooks.sh  scan-secrets.sh
scripts/devnet/: deploy.sh  run_integration_tests.sh
tests/integration/: README.md  __init__.py  pytest.ini  requirements.txt  test_signal_oracle.py
