[package]
name = "sso-signal"
version = "0.1.0"
description = "SSO-1: Standardized Verifiable Signal Oracle - On-chain Program"
edition = "2021"
license = "MIT"
authors = ["SSO-1 Contributors"]
repository = "https://github.com/your-org/sso-1"
keywords = ["solana", "oracle", "tee", "defi", "signals"]
categories = ["cryptography", "finance"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sso_signal"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
# Anchor framework
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
constant_time_eq = "=0.3.1"


# Hex encoding for logging
hex = "0.4.3"

# Switchboard On-Demand SDK (for attestation verification)
# switchboard-on-demand = "0.3"

[dev-dependencies]
# Testing utilities
anchor-client = "0.32.1"
solana-program-test = ">=2.1.0"
solana-sdk = ">=2.1.0"
tokio = { version = "1.36", features = ["full"] }


[profile.release]
overflow-checks = true
lto = "fat"
opt-level = "z"
codegen-units = 1

[profile.dev]
overflow-checks = true
